package csd230.s26.lab1.pojos;

public interface SaleableItem {
    void sellItem();
    double getPrice();
}
